welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var i:Int
            ^array123:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while(i<nums.length-2){
        ^