welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	var i:Int
	
	while(i<nums.length-2){
		if( nums(i)==1 && nums(i+1)==2 && nums(i+3)==3){
			return true
		}else{
			return false
		}
	}
}
